--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,10 @@ li a:hover {
 }
 
 @media print, screen and (max-width: 480px) {
+  p {
+    width: 100%;
+    font-size: 0.9em;
+  }
 }
 
 /* Animations */
